添加简单的测试 不过尚且不支持require https://github.com/lele85/karma-electron-launcher/issues/3

--- a/package.json
+++ b/package.json
@@ -17,13 +17,18 @@
   },
   "homepage": "https://github.com/gastrodia/ng2-tree#readme",
   "devDependencies": {
+    "es6-module-loader": "^0.17.7",
     "gulp": "^3.9.0",
     "gulp-less": "^3.0.3",
     "jasmine": "^2.3.2",
     "karma-chrome-launcher": "^0.2.0",
     "karma-coverage": "^0.5.2",
+    "karma-electron-launcher": "0.0.2",
     "karma-jasmine": "^0.3.6",
-    "through2": "^2.0.0"
+    "karma-systemjs": "^0.8.0",
+    "systemjs": "^0.18.17",
+    "through2": "^2.0.0",
+    "traceur": "0.0.91"
   },
   "dependencies": {
     "jasmine-core": "^2.3.4",
